# financial_topic_modeling

./: README.md  config.yaml  data_preprocessing.py  data_url_csv.txt  ipo_s1_filing_final.csv  lda_model_gensim.py  lda_model_sklearn.py  main.py  pyproject.toml  requirements.txt  testing.ipynb  utils.py  visualizing_wordcloud.py
outputs/gensim_k10/: metrics.yaml  topics.txt
outputs/run_20250508_214520/: lda_model  lda_model.expElogbeta.npy  lda_model.id2word  lda_model.state  metrics.yaml  topic_perplexity_scores.txt  topics.txt
outputs/sklearn_k20/: document_topics.txt  metrics.yaml  topics.txt
stopwords/: additional_stopwords.txt  financial_stopwords.txt
